# icdm2020

./: .gitignore  README.md  setup.cfg
data/raw_data_from_so_query/: actions-2009-01.csv  actions-2010-01.csv  actions-2011-01.csv  actions-2012-01.csv  actions-2013-01.csv  actions-2014-01.csv  actions-2015-01.csv  actions-2016-01.csv  actions-2017-01.csv  actions-2018-01.csv  actions-2019-01.csv  badges-2009-01.csv  badges-2010-01.csv  badges-2011-01.csv  badges-2012-01.csv  badges-2013-01.csv  badges-2014-01.csv  badges-2015-01.csv  badges-2016-01.csv  badges-2017-01.csv  badges-2018-01.csv  badges-2019-01.csv
scripts/: dispatch_job.sh  execute_jobs.sh  preprocessing.py  run_badge_study.sh  run_inference.py  run_reputation_study.sh  run_so_experiments.py
src/data_utils/: xml_to_json.py
src/reputation_study/: convert_so_data_to_pandas.py  data_loader.py  data_preprosessor.py  models.py  plotting_utils.py  scratch
src/so_study/: badge_experiment_settings.py  load_so_data.py  main.py  models.py  utils.py
