[metadata]
name = so_study
version = 0.0.1
license = MIT
license_files = LICENSE
url = https://github.com/NickHoernle/icdm_2020
author = Nick Hoernle
author_email = me@nickhoernle.com
keywords = generative_models badges incentive_design
description = Model the activity of users around some threshold badge
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    black
    fire
    ipython
    numpy
    matplotlib
    pandas
    pylint
    pytest
    scipy
    torch
    torchvision
    tqdm
    tornado
setup_requires =
    pytest-runner
tests_require =
    pytest
packages = find:
package_dir =
    =src
scripts =
    scripts/run_inference.py
    scripts/run_so_experiments.py
    scripts/preprocessing.py

[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
pythonfiles = test_*.py